# fsoft2026_1DC_1

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.run/: main.cpp.run.xml
Documentation/Iteration01/: Technical Report.docx
Documentation/Iteration02/: Relatorio_Tecnico (2).docx  ~$latorio_Tecnico (2).docx
Documentation/Iteration03/: Relatorio Tecnicon3.docx
ProjectTest/: CMakeLists.txt  ClienteServiceTest.cpp  DepositoServiceTest.cpp  DomainTest.cpp  EncomendaServiceTest.cpp  SistemaControllerTest.cpp  VeiculoServiceTest.cpp
src/: main.cpp
src/View/headers/: AdministradorView.h  ClienteView.h  MenuView.h  MenuprincipalView.h  UtilsView.h
src/View/sources/: AdministradorView.cpp  ClienteView.cpp  MenuView.cpp  MenuprincipalView.cpp  UtilsView.cpp
src/controller/: Sistema.cpp  Sistema.h
src/domain/: Cliente.cpp
src/domain/headers/: Cliente.h  Deposito.h  Encomenda.h  Veiculo.h
src/domain/sources/: Cliente.cpp  Deposito.cpp  Encomenda.cpp  Veiculo.cpp
src/dtos/headers/: ClienteInDto.h  ClienteOutDto.h  DepositoInDto.h  DepositoOutDto.h  EncomendaInDto.h  EncomendaOutDto.h  VeiculoInDto.h  VeiculoOutDto.h
src/mappers/headers/: ClienteMapper.h  DepositoMapper.h  EncomendaMapper.h  VeiculoMapper.h
src/mappers/sources/: ClienteMapper.cpp  DepositoMapper.cpp  EncomendaMapper.cpp  VeiculoMapper.cpp
src/repository/headers/: ClienteRepository.h  DepositoRepository.h  EncomendaRepository.h  VeiculoRepository.h
src/repository/sources/: ClienteRepository.cpp  DepositoRepository.cpp  EncomendaRepository.cpp  VeiculoRepository.cpp
src/service/: Recomendacao.cpp  Recomendacao.h
src/service/headers/: ClienteService.h  DepositoService.h  EncomendaService.h  RecomendacaoService.h  VeiculoService.h
src/service/sources/: ClienteService.cpp  DepositoService.cpp  EncomendaService.cpp  RecomendacaoService.cpp  VeiculoService.cpp
